<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_event"
            android:title="@string/store" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_blacy24px"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/ic_checkin_blacy24px"
            android:title="@string/main_check_in" />
    </group>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black600_24dp"
                android:title="@string/set" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black600_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync_blacy24px"
                android:title="@string/sync" />
        </menu>
    </item>

</menu>
