<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Farble Dast
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white">

    <android.support.design.widget.AppBarLayout
        android:id="@id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppToolbarTheme"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbarlayout"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white">


            <TextView
                android:id="@id/tv_hot"
                style="@style/mainChannel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hot" />
        </FrameLayout>

        <TextView
            android:id="@id/tv_complex"
            style="@style/mainChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complex" />

        <TextView
            android:id="@id/tv_work"
            style="@style/mainChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work" />

        <TextView
            android:id="@id/tv_animation"
            style="@style/mainChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animation" />

        <TextView
            android:id="@id/tv_cartoon"
            style="@style/mainChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cartoon" />

        <TextView
            android:id="@id/tv_game"
            style="@style/mainChannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game" />
    </LinearLayout>
</RelativeLayout>