<?xml version="1.0" encoding="utf-8"?>
<!--
      Copyright 2014 Farble Dast. All rights reserved.

      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
      -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="?attr/actionBarSize">

            <LinearLayout
                style="@style/layoutPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/application_info_title" />

                <TextView
                    android:id="@id/text_application_info"
                    style="@style/textContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/developer_info_title" />

                <TextView
                    android:id="@id/text_developer_info"
                    style="@style/textContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_teal_800" />

                <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/libraries_title" />

                <TextView
                    android:id="@id/text_libraries"
                    style="@style/textContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/license_title" />

                <TextView
                    android:id="@id/text_license"
                    style="@style/textContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/HeadlineTextStyle"
                    android:text="@string/third_party_licenses_title" />

                <TextView
                    android:id="@id/text_3rd_party_licenses"
                    style="@style/textContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

        <include
            layout="@layout/toolbar"/>

    </FrameLayout>
</RelativeLayout>